--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@hugeicons/react": "^1.1.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
+    "quill": "^2.0.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-quilljs": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
