--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@hugeicons/core-free-icons": "^1.2.0",
     "@hugeicons/react": "^1.1.1",
+    "axios": "^1.13.2",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "quill": "^2.0.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-quilljs": "^2.0.5"
+    "react-quilljs": "^2.0.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
