--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.2",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "quill": "^2.0.3",
@@ -26,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
